deployment/chat/base/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: chat
  name: chat
  namespace: chat
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: chat
  sessionAffinity: None
  type: ClusterIP
